@@ -18,8 +18,6 @@ sonar.links.issue=https://github.com/gansm/finalcut/issues
 sonar.sources=.
 sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.threads=2
-sonar.cfamily.cache.enabled=true
-sonar.cfamily.cache.path=/tmp/sonar-cache
 sonar.exclusions=final/font/**,final/fconfig.h
 sonar.coverage.exclusions=**/**
 
